2007-05-04  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: added an internal method to resolve a physical path
	to a file from its virtual path considering the possibility that a
	control is placed in a master page, which in turn is referenced
	from a directory another than that of master page itself.

2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* AttributeCollection.cs:
	* DataBindingHandlerAttribute.cs:
	* HtmlTextWriter.cs:
	* PartialCachingControl.cs:
	* TemplateControl.cs:
	* TemplateControl.jvm.cs:
	* XPathBinder.cs:						
	added missing API.	

2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* CssStyleCollection.cs: optimization:
	used StringBuilder instead string to hold value.
	When added key that not exists in collection, value is recalculated by 
	appending required key to existing value.	

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: ResolveClientUrl: optimization.
	if basePath is the same as TemplateSourceDirectory 
	releativeUrl is returned as is.

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs:
	ResolveClientUrl considers TemplateSourceDirectory property.

2007-05-01  Marek Habersack  <mhabersack@novell.com>

	* PageParser.cs: clientTarget comparisons must be case-insensitive

2007-04-30 Konstantin Triger <kostat@mainsoft.com>

	* DataBinder.cs: When formatting, threat empty string as null.

2007-04-27  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlParser.cs: 2.0 allows 'Namespace' without the
	'Assembly' attribute on tag prefix registration.

	* TemplateParser.cs: do not rely on assembly name being not null.

2007-04-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* TemplateParser.cs: On 2.0 profile, allow namespace in ClassName
	attribute. Fixes part of bug #81399.

2007-04-11  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: check whether control passed to
	RegisterRequiresPostBack implements the IPostBackDataHandler
	interface.
